--- a/roadmaps.html
+++ b/roadmaps.html
@@ -18,7 +18,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -36,10 +36,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
         </div>
     </header>
@@ -53,43 +53,43 @@
             <div class="sections-grid">
                 <div class="section-card">
                     <a href="basicroadmap.html">
-                    <img src="/images/pb.png" alt="basic">
+                    <img src="pb.png" alt="basic">
                 </a>
                     <h3>اساسيات البرمجه</h3>
                 </div>
                 <div class="section-card">
                     <a href="frontendroadmap.html">
-                    <img src="/images/front end.png" alt="frontend">
+                    <img src="front end.png" alt="frontend">
                 </a>
                     <h3>Frontend</h3>
                 </div>
                 <div class="section-card">
                     <a href="backendroadmap.html">
-                    <img src="/images/back-end.png" alt="back-end">
+                    <img src="back-end.png" alt="back-end">
                 </a>
                     <h3>back-end</h3>
                 </div>
                 <div class="section-card">
                     <a href="androidroadmap.html">
-                    <img src="/images/android.png" alt="android">
+                    <img src="android.png" alt="android">
                 </a>
                     <h3>Android application</h3>
                 </div>
                 <div class="section-card">
                     <a href="iosroadmap.html">
-                    <img src="/images/ios.png" alt="IOS">
+                    <img src="ios.png" alt="IOS">
                 </a>
                     <h3>IOS application</h3>
                 </div>
                 <div class="section-card">
                     <a href="disktoproadmap.html">
-                    <img src="/images/disktop.png" alt="disktop">
+                    <img src="disktop.png" alt="disktop">
                 </a>
                     <h3>Disktop application</h3>
                 </div>
                 <div class="section-card">
                     <a href="flutterroadmap.html">
-                    <img src="/images/flutter.png" alt="flutter">
+                    <img src="flutter.png" alt="flutter">
                 </a>
                     <h3> Dart&flutter</h3>
                 </div>
