--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -37,10 +37,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
 
         </div>
@@ -51,28 +51,28 @@
         <div class="container">
             <div class="sections-grid">
                 <div class="section-card">
-                    <img src="/images/onlinecompilerHtml&css&js.PNG" alt="">
+                    <img src="onlinecompilerHtml&css&js.PNG" alt="">
                     <h3>online compiler (ببساطه)HTML&CSS&JS</h3>
                     <P>محرر برمجي مباشر لتنفيذ أكواد الويب فوراً.</P>
                     <a href="https://github.com/akcode55/learn-programming"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/learn-programming/"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/pythoncompiler.PNG" alt="">
+                    <img src="pythoncompiler.PNG" alt="">
                     <h3> Python Compiler  </h3>
                     <P>أداة لتشغيل أكواد Python مباشرة عبر الإنترنت.</P>
                     <a href="https://github.com/akcode55/python-compiler"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/python-compiler/"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/learnprogramming.PNG" alt="">
+                    <img src="learnprogramming.PNG" alt="">
                     <h3>موقع بسيط لتعلم البرمجه</h3>
                     <P>موقع تفاعلي لتبسيط وتعليم البرمجة  للمبتدئين.</P>
                     <a href="https://github.com/akcode55/learn-programming"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/learn-programming/"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/programmig testing.PNG" alt="">
+                    <img src="programmig testing.PNG" alt="">
                     <h3>موقع اختبارات في اللغات البرمجيه</h3>
                     <P>موقع لاختبارات تفاعلية لتقييم وتطوير مهارات البرمجة .</P>
                     <a href="https://github.com/akcode55/lang.git"><button>  تحميل الكود</button> </a>
@@ -80,35 +80,35 @@
                 </div>
 
                 <div class="section-card">
-                    <img src="/images/Roguelike.png" alt="">
+                    <img src="Roguelike.png" alt="">
                     <h3>#Roguelike cلعبة</h3>
                     <P> غامرة عشوائية مليئة بالتحديات والموت الدائم، تجعل كل جولة فريدة..</P>
                     <a href="https://harmash.com/projects/13/4469dbf3-c790-40a4-b45f-10e17f77ea55_Dungeon%20Gunner.7z"><button>  تحميل الكود</button> </a>
                     <a href="https://www.mediafire.com/file/xt7ny1qxshdy87q/Roguelike%25D9%2584%25D8%25B9%25D8%25A8%25D8%25A9_c%2523.7z/file"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/imagegenerating.PNG" alt="">
+                    <img src="imagegenerating.PNG" alt="">
                     <h3>   Image Generatig with pixels api </h3>
                     <p>توليد صور فريدة بناءً على وصف نصي لتحويل الأفكار إلى تصاميم مرئية.</p>
                     <a href="https://github.com/akcode55/image-generating-ai.git"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/image-generating-ai/"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/ultrawalpapers.PNG" alt="">
+                    <img src="ultrawalpapers.PNG" alt="">
                     <h3>   Ultra Res Walpapers </h3>
                     <P>خلفيات فائقة الدقة توفر جودة مدهشة وتفاصيل دقيقة.</P>
                     <a href="https://github.com/akcode55/image-searching.git"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/image-searching/"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/portfolio.PNG" alt="">
+                    <img src="portfolio.PNG" alt="">
                     <h3>  Portfolio </h3>
                     <P>موقع شخصي لعرض المهارات والمشاريع بشكل احترافي.</P>
                     <a href="https://github.com/akcode55/portfolio-AK.git"><button>  تحميل الكود</button> </a>
                     <a href="https://akcode55.github.io/portfolio-AK//"><button>  معاينة المشروع</button> </a>
                 </div>
                 <div class="section-card">
-                    <img src="/images/tools cmd.PNG" alt="">
+                    <img src="tools cmd.PNG" alt="">
                     <h3>  CMD Tools   </h3>
                     <P>مجموعة أوامر سطر الأوامر لإدارة البرمجيات والعتاد بفعالية</P>
                     <a href="https://github.com/akcode55/cmd-tools.git"><button>  تحميل الكود</button> </a>
