--- a/iosroadmap.html
+++ b/iosroadmap.html
@@ -81,7 +81,7 @@
     <header class="top-header">
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
       </header>
