--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -38,10 +38,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
  
         </div>
@@ -55,42 +55,42 @@
             <div class="sections-grid">
                 <div class="section-card">
                     <h3>أساسيات البرمجة</h3>
-                  <img src="/images/pb.png" alt="أساسيات البرمجة"></a>
+                  <img src="pb.png" alt="أساسيات البرمجة"></a>
                     <p>تم إعداد هذه الدورة بعناية لتعليم أسس البرمجة للمبتدئين بشكل تفاعلي خالي من أي تعقيد.</p>
                 </div>
                 <div class="section-card">
                     <h3>قواعد البيانات</h3>
-                    <img src="images/sql.png" alt="قواعد البيانات">
+                    <img src="sql.png" alt="قواعد البيانات">
                     <p>سلسلة من المفاهيم والدروس الشاملة لقواعد البيانات.</p>
                 </div>
                 <div class="section-card">
                     <h3>HTML</h3>
-                    <img src="images/html.png" alt="HTML">
+                    <img src="html.png" alt="HTML">
                     <p>لغة تستخدم في إنشاء صفحات الويب لتعيين العناصر التي سيتم وضعها.</p>
                 </div>
                 <div class="section-card">
                     <h3>CSS</h3>
-                    <img src="images/css.png" alt="CSS">
+                    <img src="css.png" alt="CSS">
                     <p>تعلم كيفية تنسيق صفحات الويب باستخدام CSS لتحسين التصميم.</p>
                 </div>
                 <div class="section-card">
                     <h3>جافاسكريبت</h3>
-                    <img src="images/js.png" alt="جافاسكريبت">
+                    <img src="js.png" alt="جافاسكريبت">
                     <p>لغة برمجة تتيح لك إنشاء محتوى ديناميكي على صفحات الويب.</p>
                 </div>
                 <div class="section-card">
                     <h3>React</h3>
-                    <img src="images/react.png" alt="React">
+                    <img src="react.png" alt="React">
                     <p>مكتبة جافاسكريبت لبناء واجهات مستخدم تفاعلية.</p>
                 </div>
                 <div class="section-card">
                     <h3>Python</h3>
-                    <img src="images/python.png" alt="Python">
+                    <img src="python.png" alt="Python">
                     <p>لغة برمجة يمكن استخدامها في مجالات منتعدده مثل (التطبيقات-الالعاب-المواقع-ايضا مهمه في الاختراق)</p>
                 </div>
                 <div class="section-card">
                     <h3>C++</h3>
-                    <img src="images/c++.png" alt="C++">
+                    <img src="c++.png" alt="C++">
                     <p>
                          تُستخدم في
                         تطوير أنظمة التشغيل
@@ -102,7 +102,7 @@
                 </div>
                 <div class="section-card">
                     <h3>Java</h3>
-                    <img src="images/java.png" alt="Java">
+                    <img src="java.png" alt="Java">
                     <p> تُستخدم في
                         تطوير تطبيقات الويب
                         بناء تطبيقات الأجهزة المحمولة (خاصة Android)
@@ -112,7 +112,7 @@
                 </div>
                 <div class="section-card">
                     <h3>Algorithms</h3>
-                    <img src="images/algorithm.png" alt="Algorithm">
+                    <img src="algorithm.png" alt="Algorithm">
                     <p>تستخدم في
                         حل المشكلات الرياضية والمعقدة
                         تحسين أداء البرامج
@@ -130,7 +130,7 @@
             <div class="about-site">
                 <!-- إضافة الشعار بجانب الهدف -->
                 <div class="logo-goal-container">
-                    <img src="/images/logo.png" alt="شعار الموقع" class="footer-logo">
+                    <img src="logo.png" alt="شعار الموقع" class="footer-logo">
                     <div class="goal-text">
                         <h2>هدف الموقع</h2>
                         <p>
