--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -35,10 +35,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
         </div>
     </header>
@@ -53,28 +53,28 @@
     <div class="container">
         <div class="games-grid">
             <div class="game-card">
-                <img src="images/codecombat.PNG" alt="لعبة CodeCombat">
+                <img src="codecombat.PNG" alt="لعبة CodeCombat">
                 <h2>CodeCompat</h2>
                 <h3>لعبة Python، JavaScript، CoffeeScript</h3>
                 <p>لعبة تفاعلية تُعلم البرمجة عبر حل الألغاز وكتابة الأكواد</p>
                 <a href="https://codecombat.com/"> أبدء العب </a>
             </div>
             <div class="game-card">
-                <img src="images/Flexbox Froggy.PNG" alt="لعبة Flexbox Froggy">
+                <img src="Flexbox Froggy.PNG" alt="لعبة Flexbox Froggy">
                 <h2>Flexbox Froggy</h2>
                 <h3>لعبة CSS</h3>
                 <p>لعبة بسيطة تُعلم CSS Flexbox من خلال ترتيب الضفادع على زهور الماء باستخدام الأكواد.</p>
                 <a href="https://flexboxfroggy.com/#ar"> أبدء العب </a>
             </div>
             <div class="game-card">
-                <img src="images/CodinGame.PNG" alt="لعبة CodinGame">
+                <img src="CodinGame.PNG" alt="لعبة CodinGame">
                 <h2> CodinGame</h2>
                 <h3>لعبة Python، Java، C++، JavaScript</h3>
                 <p>منصة تُعلم البرمجة من خلال ألعاب حل الألغاز البرمجية وتطوير الألعاب.</p>
                 <a href="https://www.codingame.com/start/"> أبدء العب </a>
             </div>
             <div class="game-card">
-                <img src="images/SQL Murder Mystery.PNG" alt="لعبة SQL Murder Mystery">
+                <img src="SQL Murder Mystery.PNG" alt="لعبة SQL Murder Mystery">
                 <H2>SQL Murder Mystery</H2>
                 <h3>لعبة SQL</h3>
                 <p>لعبة تُعلم SQL من خلال حل لغز جريمة باستخدام قواعد البيانات.</p>
