--- a/books.html
+++ b/books.html
@@ -18,7 +18,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -36,10 +36,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
         </div>
     </header>
@@ -53,61 +53,61 @@
 
             <div class="books-grid">
               <div class="book-card">
-                <img src="/images/اردوينو.png" alt="كتاب اردوينو">
+                <img src="اردوينو.png" alt="كتاب اردوينو">
                 <h3>كتاب أردوينو ببساطة</h3>
                 <p>تعلم التحكم الآلي بسهولة للجميع .</p>
                 <a href="https://www.mediafire.com/file/khdbih8p4hocl30/aeb81fa7-9a25-4f64-a358-cf1723027d83_SimplyArduino.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/scratch.png" alt="كتاب scratch">
+                <img src="scratch.png" alt="كتاب scratch">
                 <h3>كتاب تعلم البرمجةسكراتش</h3>
                 <p>برمجة الأطفال تُشجع الإبداع والتفكير.</p>
                 <a href="https://www.mediafire.com/file/bb8m9arobx8ic5l/كتاب+تعلم+البرمجة+مع+القط+سكراتش.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/cbook.png" alt="كتاب C">
+                <img src="cbook.png" alt="كتاب C">
                 <h3>كتاب تعلم لغة C</h3>
                 <p>لغة C عملية ومتعددة الأغراض لتطوير الأنظمة والبرمجيات.</p>
                 <a href="https://www.mediafire.com/file/y3bleosy5vlp503/cbook.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="images/jsbook.png" alt="كتاب Javascript">
+                <img src="jsbook.png" alt="كتاب Javascript">
                 <h3>كتاب البرمجة بلغة جافاسكربت</h3>
                 <p>كتاب يشرح كيفية كتابة تعليمات يفهمها الحاسوب لتنفيذ مهام مخصصة ومعقدة</p>
                 <a href="https://www.mediafire.com/file/v6ab6cia0ngzyd8/jsbook.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/databook.png" alt="كتاب قواعد البيانات">
+                <img src="databook.png" alt="كتاب قواعد البيانات">
                 <h3>  كتاب تصميم قواعد البيانات</h3>
                 <p>تعلم كيفية إنشاء وإدارة قواعد البيانات باحترافية.</p>
                 <a href="https://www.mediafire.com/file/7585fi13m9e703d/databook.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/HTMLB.png" alt="نحو فهم أعمق لتقنياتHTML5 ">
+                <img src="HTMLB.png" alt="نحو فهم أعمق لتقنياتHTML5 ">
                 <h3>   نحو فهم أعمق لتقنيات  HTML5  </h3>
                 <p>أساسيات HTML5 ببساطة واحترافية متكاملة</p>
                 <a href="https://www.mediafire.com/file/ylhshq3bbz2ubvi/4418e3e0-6f2f-4a4c-9a23-bc78d5b53907_Dive-Into-HTML5-Arabic-1.0.0.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/pythonbook.PNG" alt="بايثون للجميع ">
+                <img src="pythonbook.PNG" alt="بايثون للجميع ">
                 <h3>بايثون للجميع</h3>
                 <p>تعلم البرمجة ببايثون بأسلوب بسيط.</p>
                 <a href="https://www.mediafire.com/file/3szys5d3eik0uo8/pythonbook.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/pyhonbookحاسوب.PNG" alt="البرمجة بلغة بايثون  ">
+                <img src="pyhonbookحاسوب.PNG" alt="البرمجة بلغة بايثون  ">
                 <h3>البرمجة بلغة بايثون</h3>
                 <p>تعلم البرمجة وكتابة البرامج وتنقيحها بلغة بايثون</p>
                 <a href="https://www.mediafire.com/file/gs06ulhxi7blcv9/البرمجه+بلغة+بايثون+اكادمية+حاسوب.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/degitalbook.PNG" alt="دليل الأمان الرقمي">
+                <img src="degitalbook.PNG" alt="دليل الأمان الرقمي">
                 <h3> دليل الأمن الرقمي</h3>
                 <p>حماية بياناتك ومعلوماتك على الإنترنت.</p>
                 <a href="https://www.mediafire.com/file/svxh0pqt515qy99/دليل+الامن+الرقمي.pdf/file">تحميل الكتاب</a>
               </div>
               <div class="book-card">
-                <img src="/images/ai.PNG" alt="المدخل الى الذكاء الأصطناعي وتعلم الآله">
+                <img src="ai.PNG" alt="المدخل الى الذكاء الأصطناعي وتعلم الآله">
                 <h3>المدخل الى الذكاء الاصطناعي وتعلم الآله</h3>
                 <p>أساسيات الذكاء الاصطناعي وتعلم الآلة.</p>
                 <a href="https://www.mediafire.com/file/cud1nvicln60d4d/المدخل+الى+الذكاء+الاصطناعي.pdf/file">تحميل الكتاب</a>
