--- a/basiccourse.html
+++ b/basiccourse.html
@@ -18,7 +18,7 @@
   <header class="top-header">
     <div class="logo-container">
         <a href="index.html">
-            <img src="/images/0.png" alt="الشعار" class="header-logo">
+            <img src="0.png" alt="الشعار" class="header-logo">
         </a>
     </div>
   </header>
@@ -32,7 +32,7 @@
       <h2 class="section-title">كورسات المبتدئين</h2>
       <div class="courses-grid">
         <div class="course-card">
-          <img src="/images/c++course.png" alt="C++">
+          <img src="c++course.png" alt="C++">
           <div class="course-card-content">
             <h3>C++من الصفر الى الأحتراف</h3>
             <p>تعلم C++: دليلك الشامل من الأساسيات إلى الاحتراف، مع أمثلة تطبيقية ومشاريع عملية لتطوير مهارات البرمجة بفعالية."</p>
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="course-card">
-          <img src="/images/cs50.png" alt="C50">
+          <img src="cs50.png" alt="C50">
           <div class="course-card-content">
             <h3>أساسيات البرمجة cs50</h3>
             <p>دورة CS50: مقدمة شاملة لأساسيات البرمجة وحل المشكلات، تركز على التفكير المنطقي واستخدام لغات مثل C وPython لبناء مشاريع واقعية."</p>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="course-card">
-          <img src="/images/datastructure.png" alt="Data Structures">
+          <img src="datastructure.png" alt="Data Structures">
           <div class="course-card-content">
             <h3>هياكل البيانات</h3>
             <p>هياكل البيانات في C++: فهم متعمق للمفاهيم الأساسية مثل القوائم، المكدسات، الطوابير، الأشجار، والرسوم البيانية مع أمثلة عملية وتطبيقات برمجية.</p>
@@ -63,7 +63,7 @@
       <h2 class="section-title">كورسات المتقدمين</h2>
       <div class="courses-grid">
         <div class="course-card">
-          <img src="/images/ALGORITHM COURSE.png" alt="Algorithms">
+          <img src="ALGORITHM COURSE.png" alt="Algorithms">
           <div class="course-card-content">
             <h3> الخوارزميات وحل المشكلات</h3>
             <p>الخوارزميات: الأساسيات، التحليل، والتطبيق العملي لتحسين الكفاءة في حل المشكلات البرمجية باستخدام تقنيات حديثة وأمثلة واقعية</p>
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="course-card">
-          <img src="/images/OOP.png" alt="Object-Oriented Programming">
+          <img src="OOP.png" alt="Object-Oriented Programming">
           <div class="course-card-content">
             <h3>البرمجة الكائنية التوجه</h3>
             <p>البرمجة الكائنية التوجه: منهج حديث لتنظيم الكود باستخدام الكائنات، مع التركيز على المبادئ الأساسية كالتغليف، الوراثة، والتعددية.</p>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="course-card">
-          <img src="/images/cleancode.png" alt="Object-Oriented Programming">
+          <img src="cleancode.png" alt="Object-Oriented Programming">
           <div class="course-card-content">
             <h3> Clean Code </h3>
             <p>Clean Code: Writing Code for Humans هو كورس يهدف إلى تحسين جودة الكود وجعل الكتابة البرمجية أكثر احترافية وقراءة. يركز على مبادئ كتابة كود نظيف، قابل للفهم والصيانة،</p>
