--- a/Lessons.html
+++ b/Lessons.html
@@ -18,7 +18,7 @@
         <!-- الشعار الجديد -->
         <div class="logo-container">
             <a href="index.html">
-                <img src="/images/0.png" alt="الشعار" class="header-logo">
+                <img src="0.png" alt="الشعار" class="header-logo">
             </a>
         </div>
 
@@ -36,10 +36,10 @@
         </nav>
         <div class="header-icons">
             <a href="#" id="toggle-dark-mode" class="icon-link">
-                <img src="/images/dark-mode.png" alt="Dark Mode Icon" class="header-icon">
+                <img src="dark-mode.png" alt="Dark Mode Icon" class="header-icon">
             </a>
             <a href="#" id="toggle-language" class="icon-link">
-                <img src="/images/language.png" alt="Language Icon" class="header-icon">
+                <img src="language.png" alt="Language Icon" class="header-icon">
             </a>
         </div>
     </header>
@@ -53,39 +53,39 @@
             <div class="sections-grid">
                 <div class="section-card">
                     <a href="basic lesson.html">
-                    <img src="/images/pb.png" alt="HTML">
+                    <img src="pb.png" alt="HTML">
                 </a>
                     <h3>اساسيات البرمجه</h3>
                 </div>
                 <div class="section-card">
                     <a href="html lesson.html">
-                    <img src="/images/html.png" alt="HTML">
+                    <img src="html.png" alt="HTML">
                 </a>
                     <h3>HTML</h3>
                 </div>
                 <div class="section-card">
                     <a href="css lesson.html">
-                    <img src="/images/css.png" alt="CSS">
+                    <img src="css.png" alt="CSS">
                 </a>
                     <h3>CSS</h3>
                 </div>
                
                 <div class="section-card">
                     <a href="js lesson.html">
-                    <img src="/images/js.png" alt="JavaScript">
+                    <img src="js.png" alt="JavaScript">
                 </a>
                     <h3>JavaScript</h3>
                 </div>
                 <div class="section-card">
                     <a href="python lesson.html">
-                    <img src="/images/python.png" alt="Python">
+                    <img src="python.png" alt="Python">
                 </a>
                     <h3>Python</h3>
                 </div>
 
                 <div class="section-card">
                     <a href="java lesson.html">
-                    <img src="/images/java.png" alt="Java">
+                    <img src="java.png" alt="Java">
                 </a>
                     <h3>Java</h3>
                 </div>
